# babel

./: CMakeLists.txt  conanfile.txt
Client/: CMakeLists.txt
Client/include/Command/: Command.hpp
Client/include/Network/: UDPNetwork.hpp
Client/include/Widgets/: CallDialog.hpp  CallDialog.ui  ConnectionDialog.hpp  ConnectionDialog.ui  MainWindow.hpp  MainWindow.ui
Client/src/: Main.cpp
Client/src/Command/: Command.cpp
Client/src/Network/: UDPNetwork.cpp
Client/src/Widgets/: CallDialog.cpp  ConnectionDialog.cpp  MainWindow.cpp
Common/include/Audio/: IAudioManager.hpp  Opus.hpp  PortAudio.hpp
Common/include/Exceptions/: AudioManagerException.hpp  BabelException.hpp  NetworkException.hpp
Common/include/Network/: INetwork.hpp
Common/src/Audio/: Opus.cpp  PortAudio.cpp
Common/src/Exceptions/: AudioManagerException.cpp  BabelException.cpp  NetworkException.cpp
Server/: CMakeLists.txt
Server/include/: Server.hpp
Server/include/Command/: Command.hpp
Server/include/Network/: UDPNetwork.hpp
Server/src/: Main.cpp  Server.cpp
Server/src/Command/: Command.cpp
Server/src/Network/: UDPNetwork.cpp
